--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <li>
                Patel Muhammad - I am GitHub Campus Expert ❤️
         </li>
+        <li>
+              God of War Ragnarök!!
+              GTA VI : May 26 2026 
+              I know I can treat u better 
+              College sucks :>
+        </li>
  
 
 
