--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
         <li>
                Patel Muhammad - I am GitHub Campus Expert ❤️
         </li>
+        <li>
+              Sudhanshu - A Github learner
+        </li>
  
 
 
-
-
-    </ul>
-  </main>
-  <footer>
-    <p>&copy; Create your first PR with me ❤️</p>
-  </footer>
-</body>
-</html>
